--- a/style.css
+++ b/style.css
@@ -1,144 +1,258 @@
-#header-bar {
-    width: 100%;
+body {
+    font-family: "Roboto", sans-serif;
+}
+
+
+header {
     background-color: black;
-    height: 50px;
+    width: 100%;
+    height: 55px;
+}
+
+#header-nav-bar {
     display: flex;
     
 }
 
-.header-text {
-    color: white;
-    font-size: 1.3rem;
-    padding-left: 5px;
+.header-icons {
     
+    width: 75px;
     
-    
-    
-
-
+    padding-left: 10px;
+    padding-top: 20px;
+    height: 55px;
 
 }
 
-.main-header-text {
-    margin-top: 10px;
+.header-icons h4 {
     font-weight: 100;
 }
 
 
-.header-text {
-    width: 80px;
+
+#header-nav-bar .header-icons a {
+    text-decoration: none;
+    color: white;
+
 }
 
-#header-bar .header-text:hover {
+#header-nav-bar .header-icons:hover {
     background-color: white;
     color: black;
 }
 
 
+#header-nav-bar .header-icons:hover a{
+    color: black;
+}
 
-#main-container {
+section {
     width: 100%;
-    height: 1000px;
     display: flex;
+
 }
 
 #left-container {
     width: 20%;
-    background-color: lightgrey;
-}
-
-#Menu {
-    height: 60px;
-    width: 100%;
-    font-size: larger;
-    
-
-}
-
-.link {
-   width: 100%;
-   height: 50px;
-   
-
-}
-
-#left-container .link:hover {
-    background-color: black;
-    color: white;
-}
-
-#right-container {
-    width: 60%;
-    height: inherit;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-}
-
-.heading {
-    color: darkgreen;
-    margin-left: 20px;
-    font-size: xx-large;
-}
-
-p {
-    margin-left: 20px;
-}
-
-
-#ad-container-main {
-    height: inherit;
-    width: 20%;
-}
-
-
-.ad-container {
-    height: 300px;
-    
-}
-
-.small-ad {
-    height: 80px;
-    background-color: white;
-    border: 1px solid lightgrey;
-    text-align: center;
-    margin-top: 50px;
-}
-
-.big-ad {
-    width: 100%;
-    height: 160px;
-    background-color: white;
-    border: 1px solid lightgrey;
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-
-}
-
-.link-text {
-    margin: 10px 10px 10px 10px;
-}
-
-.menu-text {
-    margin-left: 10px;
-}
-
-
-#content {
-    margin-top: 30px;
-}
-
-.content {
-    margin-top: 125px;
-}
-
-#left-container {
+    background-color: lightgray;
+    height: 1460px;
     position: relative;
 }
 
 #left-content {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     position: sticky;
     top: 0px;
+    
+}
+
+.link{
+    height: 40px;
+    width: 100%;
+    padding-top: 15px;
+    
+    
+    
+}
+
+#left-content .link a{
+    text-decoration: none;
+    color: black;
+    padding-bottom: 10px;
+}
+
+#left-content .link:hover {
+    background-color: black;
+    color: white;
+ 
+}
+
+#left-content .link:hover a{
+    color: white;
+ 
+}
+
+#left-content .link h4 {
+    padding-left: 10px;
+    
+}
+
+#right-container {
+    width: 80%;
+    height: 900px;
+    
+}
+
+.left-content {
+    width: 60%;
+    padding-top: 35px;
+}
+
+.ad-container {
+width: 40%;
+height: 400px;
+display: flex;
+flex-direction: column;
+align-items: flex-end;
+position: relative;
+right: 20px;
+
+
+
+
+
+
+}
+
+.top-ad {
+    height: 80px;
+    width: 300px;
+    border: 1px solid lightgray;
+    text-align: center;
+    margin-top: 50px;
+    
+    
+   
+    
+    
+    
+    
+    
+    
+    
+}
+
+#head-content-ad {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#head-content-ad .left-content h1{
+    font-weight: 100;
+}
+
+.bottom-ad {
+    height: 140px;
+    width: 300px;
+    border: 1px solid lightgray;
+    text-align: center;
+}
+
+.ad-container .top-ad h4 {
+    padding-top: 30px;
+    padding-bottom: 20px;
+   
+    
+    
+}
+
+.ad-container .bottom-ad h4{
+    padding-top: 60px;
+    padding-bottom: 30px;
+    
+}
+
+.left-content {
+    position: relative;
+    left: 30px;
+    margin-top: 10px;
+}
+
+.heading {
+    font-size: 2.5rem;
+    color: lightgreen;
+}
+
+* {
+    margin: 0;
+}
+
+#menu {
+    height: 50px;
+}
+
+#menu h4 {
+    padding-left: 10px;
+    padding-top: 10px;
+    font-size: larger;
+}
+
+#pages {
+    width: 100%;
+}
+
+#pages-nav {
+    width: 300px;
+    display: flex;
+    margin: auto;
+    justify-content: space-around;
+    
+}
+
+.numbers {
+    width: 50px;
+    padding: 10px;
+    height: 50px;
+    text-align: center;
+    padding-top: 30px;
+}
+
+#pages-nav .numbers:hover {
+    background-color: black;
+    color: white;
+}
+
+#footer {
+    width: 100%;
+    height: 110px;
+    background-color: grey;
+    color: white;
+}
+
+#footer h3 {
+    padding-left: 10px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    font-weight: 100;
+}
+
+#powered {
+height: 60px;
+width: 100%;
+background-color: #333333;
+}
+
+#powered h3 {
+    margin-left: 10px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: white;
+}
+
+#powered h3 a{
+    color: white;
 }
